@@ -1,11 +1,13 @@
-package com.matrix.sxt.e15;
+package com.matrix.sxt.e16;
 
 import java.util.ArrayList;
 import java.util.List;
 
-// -Xms10m -Xmx10m -XX:+PrintGCDetails -XX:MaxDirectMemorySize=5M
 // -Xms10m -Xmx10m -XX:+PrintGCDetails -XX:+PrintCommandLineFlags -XX:+UseSerialGC
-public class GcOverheadDemo {
+// -Xms10m -Xmx10m -XX:+PrintGCDetails -XX:+PrintCommandLineFlags -XX:+UseParNewGC
+// -Xms10m -Xmx10m -XX:+PrintGCDetails -XX:+PrintCommandLineFlags -XX:+UseConcMarkSweepGC
+// -Xms10m -Xmx10m -XX:+PrintGCDetails -XX:+PrintCommandLineFlags -XX:+UseParallelGC
+public class GcSerialDemo {
 	public static void main(String[] args) {
 		int i = 0;
 		List<String> list = new ArrayList<String>();
@@ -14,7 +16,6 @@ public class GcOverheadDemo {
 				list.add(String.valueOf(++ i).intern());
 			}
 		} catch (Throwable e) { // Exception和Error的上层接口
-			System.out.println("$$$$$$$$$$$$$$$$$$$$ i = " + i);
 			e.printStackTrace();
 		}
 	}
